--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
   "devDependencies": {
     "@types/node": "^20.9.2",
     "ts-node": "^10.9.1",
-    "typescript": "^5.2.2"
+    "typescript": "^5.3.2"
   },
   "dependencies": {
     "dotenv": "^16.3.1",
-    "gpt-3-encoder": "^1.1.4"
+    "gpt-3-encoder": "^1.1.4",
+    "readline": "^1.3.0"
   }
 }
