--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "dotenv": "^16.3.1",
     "gpt-3-encoder": "^1.1.4",
+    "natural": "^6.9.2",
     "readline": "^1.3.0"
   }
 }
